--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
 }
 body{
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(bday.gif);
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(2029.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
 }
 .container{
     perspective: 1000px;
@@ -19,7 +19,7 @@ body{
     height: 360px;
     position: absolute;
     top: 100px;
-    left: 230px;
+    left: 150px;
     transition: 2s;
     transform-style: preserve-3d;
 }
